Fixed bug where clicking one of the tests would increase the size of the entire nextblocks interface Now the nextblocks workspace has a fixed height of 70vh, but the width is still variable, due to the container-fluid class The tests accordion is now enclosed in a div with overflow-y: auto with a fixed max height, which makes is so that when a test is clicked, if the height increases over the allowed height, it doesn't overflow, instead making the div scrollable

--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,15 @@
 img {
     pointer-events: none;
 }
+
+#nextblocks-container {
+    height: 70vh;
+}
+
+.h-10 {
+    height: 10%;
+}
+
+.h-15 {
+    height: 15%;
+}
